src/calc/generated/MathExpressionParser.java
// Generated from .\MathExpression.g4 by ANTLR 4.9.1

	package calc.generated;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MathExpressionParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, I=4, CIS=5, PI=6, EXP=7, TRUE=8, FALSE=9, STRING=10, 
		CHAR=11, UFLOAT=12, FLOAT=13, UINT=14, INT=15, SEMI=16, VAR=17, VAL=18, 
		LPAREN=19, RPAREN=20, LBRACKET=21, RBRACKET=22, LCURLY=23, RCURLY=24, 
		COMMA=25, DOT=26, QUOTES=27, QUOTE=28, ASSIGN=29, GT=30, LT=31, NOT=32, 
		TILDE=33, QUESTION=34, COLON=35, LE=36, GE=37, EQUAL=38, NOT_EQUAL=39, 
		AND_AND=40, OR_OR=41, INC=42, DEC=43, ADD=44, SUB=45, MUL=46, DIV_INT=47, 
		DIV=48, POW=49, AND=50, OR=51, XOR=52, MOD=53, LSHIFT=54, RSHIFT=55, URSHIFT=56, 
		ASSIGN_ADD=57, ASSIGN_SUB=58, ASSIGN_MUL=59, ASSIGN_DIV=60, ASSIGN_AND=61, 
		ASSIGN_OR=62, ASSIGN_XOR=63, ASSIGN_MOD=64, ASSIGN_LSHIFT=65, ASSIGN_RSHIFT=66, 
		ASSIGN_URSHIFT=67, NEWLINE=68, WS=69, IDENTIFIER=70;
	public static final int
		RULE_input = 0, RULE_expression = 1, RULE_assignmentList = 2, RULE_assignment = 3, 
		RULE_assignmentOperator = 4, RULE_arithmeticList = 5, RULE_arithmetic = 6, 
		RULE_structure = 7, RULE_constant = 8;
	private static String[] makeRuleNames() {
		return new String[] {
			"input", "expression", "assignmentList", "assignment", "assignmentOperator", 
			"arithmeticList", "arithmetic", "structure", "constant"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'s'", "'r'", "'c'", "'i'", "'cis'", null, null, null, null, null, 
			null, null, null, null, null, "';'", "'var'", "'val'", "'('", "')'", 
			"'['", "']'", "'{'", "'}'", "','", "'.'", "'\"'", "'''", "'='", "'>'", 
			"'<'", "'!'", "'~'", "'?'", "':'", "'<='", "'>='", "'=='", "'!='", "'&&'", 
			"'||'", "'++'", "'--'", "'+'", "'-'", "'*'", "'//'", "'/'", "'**'", "'&'", 
			"'|'", "'^'", "'%'", "'<<'", "'>>'", "'>>>'", "'+='", "'-='", "'*='", 
			"'/='", "'&='", "'|='", "'^='", "'%='", "'<<='", "'>>='", "'>>>='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, "I", "CIS", "PI", "EXP", "TRUE", "FALSE", "STRING", 
			"CHAR", "UFLOAT", "FLOAT", "UINT", "INT", "SEMI", "VAR", "VAL", "LPAREN", 
			"RPAREN", "LBRACKET", "RBRACKET", "LCURLY", "RCURLY", "COMMA", "DOT", 
			"QUOTES", "QUOTE", "ASSIGN", "GT", "LT", "NOT", "TILDE", "QUESTION", 
			"COLON", "LE", "GE", "EQUAL", "NOT_EQUAL", "AND_AND", "OR_OR", "INC", 
			"DEC", "ADD", "SUB", "MUL", "DIV_INT", "DIV", "POW", "AND", "OR", "XOR", 
			"MOD", "LSHIFT", "RSHIFT", "URSHIFT", "ASSIGN_ADD", "ASSIGN_SUB", "ASSIGN_MUL", 
			"ASSIGN_DIV", "ASSIGN_AND", "ASSIGN_OR", "ASSIGN_XOR", "ASSIGN_MOD", 
			"ASSIGN_LSHIFT", "ASSIGN_RSHIFT", "ASSIGN_URSHIFT", "NEWLINE", "WS", 
			"IDENTIFIER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MathExpression.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MathExpressionParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class InputContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public InputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_input; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MathExpressionListener ) ((MathExpressionListener)listener).enterInput(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MathExpressionListener ) ((MathExpressionListener)listener).exitInput(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MathExpressionVisitor ) return ((MathExpressionVisitor<? extends T>)visitor).visitInput(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InputContext input() throws RecognitionException {
		InputContext _localctx = new InputContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_input);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(18);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public AssignmentListContext assignmentList() {
			return getRuleContext(AssignmentListContext.class,0);
		}
		public ArithmeticListContext arithmeticList() {
			return getRuleContext(ArithmeticListContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(MathExpressionParser.NEWLINE, 0); }
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MathExpressionListener ) ((MathExpressionListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MathExpressionListener ) ((MathExpressionListener)listener).exitExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MathExpressionVisitor ) return ((MathExpressionVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_expression);
		try {
			setState(23);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VAR:
			case VAL:
				enterOuterAlt(_localctx, 1);
				{
				setState(20);
				assignmentList();
				}
				break;
			case I:
			case CIS:
			case PI:
			case EXP:
			case TRUE:
			case FALSE:
			case STRING:
			case CHAR:
			case UFLOAT:
			case FLOAT:
			case UINT:
			case INT:
			case LPAREN:
			case LBRACKET:
			case NOT:
			case TILDE:
			case INC:
			case DEC:
			case ADD:
			case SUB:
			case IDENTIFIER:
				enterOuterAlt(_localctx, 2);
				{
				setState(21);
				arithmeticList();
				}
				break;
			case NEWLINE:
				enterOuterAlt(_localctx, 3);
				{
				setState(22);
				match(NEWLINE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentListContext extends ParserRuleContext {
		public List<AssignmentContext> assignment() {
			return getRuleContexts(AssignmentContext.class);
		}
		public AssignmentContext assignment(int i) {
			return getRuleContext(AssignmentContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(MathExpressionParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(MathExpressionParser.NEWLINE, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(MathExpressionParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(MathExpressionParser.COMMA, i);
		}
		public AssignmentListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignmentList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MathExpressionListener ) ((MathExpressionListener)listener).enterAssignmentList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MathExpressionListener ) ((MathExpressionListener)listener).exitAssignmentList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MathExpressionVisitor ) return ((MathExpressionVisitor<? extends T>)visitor).visitAssignmentList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentListContext assignmentList() throws RecognitionException {
		AssignmentListContext _localctx = new AssignmentListContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_assignmentList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(25);
			assignment();
			setState(30);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA || _la==NEWLINE) {
				{
				{
				setState(26);
				_la = _input.LA(1);
				if ( !(_la==COMMA || _la==NEWLINE) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(27);
				assignment();
				}
				}
				setState(32);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(MathExpressionParser.IDENTIFIER, 0); }
		public TerminalNode VAL() { return getToken(MathExpressionParser.VAL, 0); }
		public TerminalNode VAR() { return getToken(MathExpressionParser.VAR, 0); }
		public AssignmentOperatorContext assignmentOperator() {
			return getRuleContext(AssignmentOperatorContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MathExpressionListener ) ((MathExpressionListener)listener).enterAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MathExpressionListener ) ((MathExpressionListener)listener).exitAssignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MathExpressionVisitor ) return ((MathExpressionVisitor<? extends T>)visitor).visitAssignment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_assignment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(33);
			_la = _input.LA(1);
			if ( !(_la==VAR || _la==VAL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(34);
			match(IDENTIFIER);
			setState(38);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (((((_la - 29)) & ~0x3f) == 0 && ((1L << (_la - 29)) & ((1L << (ASSIGN - 29)) | (1L << (ASSIGN_ADD - 29)) | (1L << (ASSIGN_SUB - 29)) | (1L << (ASSIGN_MUL - 29)) | (1L << (ASSIGN_DIV - 29)) | (1L << (ASSIGN_AND - 29)) | (1L << (ASSIGN_OR - 29)) | (1L << (ASSIGN_XOR - 29)) | (1L << (ASSIGN_MOD - 29)) | (1L << (ASSIGN_LSHIFT - 29)) | (1L << (ASSIGN_RSHIFT - 29)) | (1L << (ASSIGN_URSHIFT - 29)))) != 0)) {
				{
				setState(35);
				assignmentOperator();
				setState(36);
				assignment();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentOperatorContext extends ParserRuleContext {
		public TerminalNode ASSIGN() { return getToken(MathExpressionParser.ASSIGN, 0); }
		public TerminalNode ASSIGN_ADD() { return getToken(MathExpressionParser.ASSIGN_ADD, 0); }
		public TerminalNode ASSIGN_SUB() { return getToken(MathExpressionParser.ASSIGN_SUB, 0); }
		public TerminalNode ASSIGN_MUL() { return getToken(MathExpressionParser.ASSIGN_MUL, 0); }
		public TerminalNode ASSIGN_DIV() { return getToken(MathExpressionParser.ASSIGN_DIV, 0); }
		public TerminalNode ASSIGN_AND() { return getToken(MathExpressionParser.ASSIGN_AND, 0); }
		public TerminalNode ASSIGN_OR() { return getToken(MathExpressionParser.ASSIGN_OR, 0); }
		public TerminalNode ASSIGN_XOR() { return getToken(MathExpressionParser.ASSIGN_XOR, 0); }
		public TerminalNode ASSIGN_MOD() { return getToken(MathExpressionParser.ASSIGN_MOD, 0); }
		public TerminalNode ASSIGN_LSHIFT() { return getToken(MathExpressionParser.ASSIGN_LSHIFT, 0); }
		public TerminalNode ASSIGN_RSHIFT() { return getToken(MathExpressionParser.ASSIGN_RSHIFT, 0); }
		public TerminalNode ASSIGN_URSHIFT() { return getToken(MathExpressionParser.ASSIGN_URSHIFT, 0); }
		public AssignmentOperatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignmentOperator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MathExpressionListener ) ((MathExpressionListener)listener).enterAssignmentOperator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MathExpressionListener ) ((MathExpressionListener)listener).exitAssignmentOperator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MathExpressionVisitor ) return ((MathExpressionVisitor<? extends T>)visitor).visitAssignmentOperator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignmentOperatorContext assignmentOperator() throws RecognitionException {
		AssignmentOperatorContext _localctx = new AssignmentOperatorContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_assignmentOperator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			_la = _input.LA(1);
			if ( !(((((_la - 29)) & ~0x3f) == 0 && ((1L << (_la - 29)) & ((1L << (ASSIGN - 29)) | (1L << (ASSIGN_ADD - 29)) | (1L << (ASSIGN_SUB - 29)) | (1L << (ASSIGN_MUL - 29)) | (1L << (ASSIGN_DIV - 29)) | (1L << (ASSIGN_AND - 29)) | (1L << (ASSIGN_OR - 29)) | (1L << (ASSIGN_XOR - 29)) | (1L << (ASSIGN_MOD - 29)) | (1L << (ASSIGN_LSHIFT - 29)) | (1L << (ASSIGN_RSHIFT - 29)) | (1L << (ASSIGN_URSHIFT - 29)))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArithmeticListContext extends ParserRuleContext {
		public List<ArithmeticContext> arithmetic() {
			return getRuleContexts(ArithmeticContext.class);
		}
		public ArithmeticContext arithmetic(int i) {
			return getRuleContext(ArithmeticContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(MathExpressionParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(MathExpressionParser.COMMA, i);
		}
		public ArithmeticListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arithmeticList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MathExpressionListener ) ((MathExpressionListener)listener).enterArithmeticList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MathExpressionListener ) ((MathExpressionListener)listener).exitArithmeticList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MathExpressionVisitor ) return ((MathExpressionVisitor<? extends T>)visitor).visitArithmeticList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArithmeticListContext arithmeticList() throws RecognitionException {
		ArithmeticListContext _localctx = new ArithmeticListContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_arithmeticList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			arithmetic(0);
			setState(47);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(43);
				match(COMMA);
				setState(44);
				arithmetic(0);
				}
				}
				setState(49);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArithmeticContext extends ParserRuleContext {
		public ArithmeticContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arithmetic; }
	 
		public ArithmeticContext() { }
		public void copyFrom(ArithmeticContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ShiftContext extends ArithmeticContext {
		public List<ArithmeticContext> arithmetic() {
			return getRuleContexts(ArithmeticContext.class);
		}
		public ArithmeticContext arithmetic(int i) {
			return getRuleContext(ArithmeticContext.class,i);
		}
		public TerminalNode LSHIFT() { return getToken(MathExpressionParser.LSHIFT, 0); }
		public TerminalNode RSHIFT() { return getToken(MathExpressionParser.RSHIFT, 0); }
		public TerminalNode URSHIFT() { return getToken(MathExpressionParser.URSHIFT, 0); }
		public ShiftContext(ArithmeticContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MathExpressionListener ) ((MathExpressionListener)listener).enterShift(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MathExpressionListener ) ((MathExpressionListener)listener).exitShift(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MathExpressionVisitor ) return ((MathExpressionVisitor<? extends T>)visitor).visitShift(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class VariableContext extends ArithmeticContext {
		public TerminalNode IDENTIFIER() { return getToken(MathExpressionParser.IDENTIFIER, 0); }
		public VariableContext(ArithmeticContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MathExpressionListener ) ((MathExpressionListener)listener).enterVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MathExpressionListener ) ((MathExpressionListener)listener).exitVariable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MathExpressionVisitor ) return ((MathExpressionVisitor<? extends T>)visitor).visitVariable(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NestedArithmeticContext extends ArithmeticContext {
		public TerminalNode LPAREN() { return getToken(MathExpressionParser.LPAREN, 0); }
		public ArithmeticContext arithmetic() {
			return getRuleContext(ArithmeticContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(MathExpressionParser.RPAREN, 0); }
		public NestedArithmeticContext(ArithmeticContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MathExpressionListener ) ((MathExpressionListener)listener).enterNestedArithmetic(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MathExpressionListener ) ((MathExpressionListener)listener).exitNestedArithmetic(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MathExpressionVisitor ) return ((MathExpressionVisitor<? extends T>)visitor).visitNestedArithmetic(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AddSubContext extends ArithmeticContext {
		public List<ArithmeticContext> arithmetic() {
			return getRuleContexts(ArithmeticContext.class);
		}
		public ArithmeticContext arithmetic(int i) {
			return getRuleContext(ArithmeticContext.class,i);
		}
		public TerminalNode ADD() { return getToken(MathExpressionParser.ADD, 0); }
		public TerminalNode SUB() { return getToken(MathExpressionParser.SUB, 0); }
		public AddSubContext(ArithmeticContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MathExpressionListener ) ((MathExpressionListener)listener).enterAddSub(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MathExpressionListener ) ((MathExpressionListener)listener).exitAddSub(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MathExpressionVisitor ) return ((MathExpressionVisitor<? extends T>)visitor).visitAddSub(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class TernaryContext extends ArithmeticContext {
		public List<ArithmeticContext> arithmetic() {
			return getRuleContexts(ArithmeticContext.class);
		}
		public ArithmeticContext arithmetic(int i) {
			return getRuleContext(ArithmeticContext.class,i);
		}
		public TerminalNode QUESTION() { return getToken(MathExpressionParser.QUESTION, 0); }
		public TerminalNode COLON() { return getToken(MathExpressionParser.COLON, 0); }
		public TernaryContext(ArithmeticContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MathExpressionListener ) ((MathExpressionListener)listener).enterTernary(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MathExpressionListener ) ((MathExpressionListener)listener).exitTernary(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MathExpressionVisitor ) return ((MathExpressionVisitor<? extends T>)visitor).visitTernary(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DataStructureContext extends ArithmeticContext {
		public StructureContext structure() {
			return getRuleContext(StructureContext.class,0);
		}
		public DataStructureContext(ArithmeticContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MathExpressionListener ) ((MathExpressionListener)listener).enterDataStructure(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MathExpressionListener ) ((MathExpressionListener)listener).exitDataStructure(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MathExpressionVisitor ) return ((MathExpressionVisitor<? extends T>)visitor).visitDataStructure(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AnyConstantContext extends ArithmeticContext {
		public ConstantContext constant() {
			return getRuleContext(ConstantContext.class,0);
		}
		public AnyConstantContext(ArithmeticContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MathExpressionListener ) ((MathExpressionListener)listener).enterAnyConstant(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MathExpressionListener ) ((MathExpressionListener)listener).exitAnyConstant(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
